--- a/index.html
+++ b/index.html
@@ -102,11 +102,20 @@
         .active-edit-btn { background: rgba(255, 123, 0, 0.2) !important; border-color: var(--neon-orange) !important; box-shadow: 0 0 15px rgba(255, 123, 0, 0.5); }
 
         /* =========================================
-           MOTOR DEL GRID: GRIDSTACK.JS
+           MOTOR DEL GRID: GRIDSTACK.JS (Libertad Absoluta)
            ========================================= */
-        .grid-stack { max-width: 1200px; margin: 0 auto; transition: filter 0.5s ease; }
+        #main-dashboard { 
+            max-width: 1200px; 
+            margin: 0 auto; 
+            transition: filter 0.5s ease; 
+        }
         
-        /* Ocultar interacciones internas durante edición */
+        /* Garantizar que no haya barras de scroll internas en los elementos del panel */
+        .grid-stack-item-content {
+            overflow: hidden !important; 
+        }
+
+        /* ESTILOS DEL MODO EDICIÓN */
         .edit-mode-active .grid-stack-item-content { cursor: grab !important; outline: 2px dashed rgba(255, 123, 0, 0.5) !important; outline-offset: 4px; transition: outline 0.3s ease; }
         .edit-mode-active .grid-stack-item-content:hover { background: rgba(255, 123, 0, 0.05); }
         .edit-mode-active .grid-stack-item-content:active { cursor: grabbing !important; }
@@ -130,12 +139,10 @@
             z-index: 99999 !important;
         }
 
-        /* ESTILOS GENERALES DE TARJETAS */
+        /* ESTILOS GENERALES DE TARJETAS (Dentro del motor) */
         .card { 
             border-radius: 20px; 
             padding: 20px 25px; 
-            position: absolute; /* Requisito de GridStack */
-            top: 0; left: 0; right: 0; bottom: 0;
             background: rgba(18, 15, 36, 0.85); 
             backdrop-filter: blur(10px); 
             border: 1px solid rgba(255,255,255,0.05); 
@@ -148,9 +155,11 @@
         }
         .card:hover { transform: translateY(-3px); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.15); border-color: rgba(255, 123, 0, 0.3); }
 
-        /* Ajustes finos de padding para las tarjetas super estrechas (radares) */
-        .card-compact { padding: 15px 25px !important; }
-        .card-compact .card-title { margin-bottom: 5px; font-size: 0.95rem; }
+        /* Ajustes finos para las tarjetas pequeñas compactas */
+        .card-compact { padding: 15px 25px !important; justify-content: center !important;}
+        @media (min-width: 768px) {
+            .card-compact .card-title { margin-bottom: 5px; font-size: 0.95rem; }
+        }
 
         /* CODIFICACIÓN DE COLORES */
         .card-ada { background: rgba(8, 10, 16, 0.98); border-color: rgba(66, 133, 244, 0.2); }
@@ -478,7 +487,7 @@
                             <span id="oracle-total-liq">-</span> <span id="total-liq-change-24h" class="change-badge" style="font-size: 1rem;"></span>
                         </div>
                     </div>
-                    <div style="flex-grow: 1; min-height: 60px; margin-top: 20px; position: relative;"><canvas id="spark-total-liq"></canvas></div>
+                    <div style="flex-grow: 1; min-height: 60px; height: 70px; margin-top: 20px; position: relative;"><canvas id="spark-total-liq"></canvas></div>
                 </div>
             </div>
         </div>
@@ -578,7 +587,6 @@
         document.getElementById('sim-ada-input').value = conf.sim;
         document.getElementById('sim-tri-input').value = conf.sim;
 
-        // 🔒 FUNCIONES DEL ESCUDO API
         function showAuthScreen(showError = false) {
             document.getElementById('auth-screen').style.display = 'flex';
             document.getElementById('main-dashboard').style.filter = 'blur(10px)';
@@ -626,25 +634,22 @@
         let grid = null;
 
         function initSortable() {
-            // INICIALIZAMOS GRIDSTACK PARA 12 COLUMNAS ABSOLUTAS
             grid = GridStack.init({
                 column: 12,
-                cellHeight: 120, // Altura base de las celdas (encaja con las tarjetas compactas)
+                cellHeight: 125, // Un poco más alto para dar respiro interno
                 margin: 20,
-                float: true, // ¡PERMITE DEJAR HUECOS VACÍOS DONDE QUIERAS!
+                float: true, // ¡PERMITE DEJAR HUECOS VACÍOS DONDE QUIERAS SIN RELLENAR!
                 disableDrag: true, 
                 disableResize: true,
                 animate: true,
                 alwaysShowResizeHandle: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent),
             });
 
-            // CARGAMOS EL LAYOUT SI EXISTE
             const savedLayout = JSON.parse(localStorage.getItem('l4va_grid_layout'));
             if (savedLayout && savedLayout.length > 0) {
                 grid.load(savedLayout);
             }
 
-            // REDIBUJAMOS LOS GRÁFICOS AL SOLTAR UNA TARJETA
             grid.on('change', function(event, items) {
                 if(chartInstance) chartInstance.resize();
                 Object.values(sparkInstances).forEach(chart => chart.resize());
@@ -737,7 +742,7 @@
                             grid: { 
                                 color: (ctx) => ctx.tick && ctx.tick.value === 0 ? 'rgba(255, 255, 255, 0.2)' : 'rgba(255,255,255,0.05)',
                                 lineWidth: (ctx) => ctx.tick && ctx.tick.value === 0 ? 15 : 1,
-                                borderDash: [] // Línea sólida semitransparente ancha
+                                borderDash: [] 
                             }, 
                             ticks: { 
                                 color: '#a0a0c0',
