--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                             <span id="oracle-total-liq">-</span> <span id="total-liq-change-24h" class="change-badge" style="font-size: 1rem;"></span>
                         </div>
                     </div>
-                    <div style="flex-grow: 1; min-height: 60px; margin-top: 20px; position: relative;"><canvas id="spark-total-liq"></canvas></div>
+                    <div style="flex-grow: 1; min-height: 60px; margin-top: 20px; margin-bottom: 15px; position: relative;"><canvas id="spark-total-liq"></canvas></div>
                 </div>
             </div>
         </div>
@@ -596,6 +596,7 @@
         document.getElementById('sim-ada-input').value = conf.sim;
         document.getElementById('sim-tri-input').value = conf.sim;
 
+        // 🔒 FUNCIONES DEL ESCUDO API
         function showAuthScreen(showError = false) {
             document.getElementById('auth-screen').style.display = 'flex';
             document.getElementById('main-dashboard').style.filter = 'blur(10px)';
@@ -749,7 +750,7 @@
                         x: { display: true, grid: { display: false }, ticks: { color: '#a0a0c0', maxTicksLimit: 8, maxRotation: 0 } }, 
                         y: { 
                             grid: { 
-                                color: (ctx) => ctx.tick && ctx.tick.value === 0 ? 'rgba(255, 255, 255, 0.2)' : 'rgba(255,255,255,0.05)',
+                                color: (ctx) => ctx.tick && ctx.tick.value === 0 ? 'rgba(255, 255, 255, 0.1)' : 'rgba(255,255,255,0.05)',
                                 lineWidth: (ctx) => ctx.tick && ctx.tick.value === 0 ? 15 : 1,
                                 borderDash: [] 
                             }, 
